# xerosync

./: README.md  __init__.py  config.json  crud.py  description.md  manifest.json  migrations.py  models.py  pyproject.toml  services.py  tasks.py  views.py  views_api.py
static/js/: index.js
templates/xero_sync/: index.html
templates/xerosync/: _api_docs.html  _input_fields.html  _xerosync.html  index.html
tests/: test_init.py
